Оновлені файли з останніми змінами на ноутбуці

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,38 +16,7 @@
 
 <body>
     <div class="wrapper">
-        <header class="header">
-<div class="container">
-    <div class="header__cont">
-<div class="header__logo">
-<a href="../pages/index.html" class="header__logo">
-    <img src="/foto/the.png" class="header__img" alt="logo">
-</a></div>
-<nav class="header__nav">
-<ul class="header_list">
-<li class="header_item">
-    <a href="../pages/about.html" class="header_link active">Про Нас</a>
-</li>
-<li class="header_item">
-    <a href="./kontakt.html" class="header_link ">Контакти</a>
-</li>
-<li class="header_item">
-    <a href="../pages/Delivery.html" class="header_link ">Доставка та оплата</a>
-</li>
-</ul>
-</nav>
-
-<div id="contents" class="btn">
-<p id="hello"></p>
-<p id="welcome"></p>
-
-<button id="change-en">En</button>
-<button id="change-cs">Čs</button>
-<button id="change-uk">Uk</button>
-</div>
-</div></div>
-
-        </header>
+        <header id="header-placeholder"></header>
         <main class="about">
 <div class="container about__container">
 <div class="about__content">
@@ -71,45 +40,14 @@
 </div>
 </div>
         </main>
-        <footer class="footer">
-<div class="container footer-container">
-
-    <div class="footer__logo">
-        <a href="../pages/index.html" class="footer__logo">
-            <img src="/foto/the.png" class="footer__img" alt="logo">
-        </a></div>
-        <div class="footer_content">
-            <ul class="footer_list">
-                <li class="footer_item">
-                    <a href="../pages/about.html" class="footer_link active">Про Нас</a>
-                </li>
-                <li class="footer_item">
-                    <a href="../pages/kontakt.html" class="footer_link">Контакти</a>
-                </li>
-                <li class="footer_item">
-                    <a href="../pages/Delivery.html" class="footer_link">Доставка та оплата</a>
-                </li>
-                </ul>
-        </div>
-        <div class="footer-naw">
-            <ul class="footer_list naw-list">
-                <li class="footer_item naw-item">
-                    <a href="https://www.instagram.com/chocolateland28?igsh=dmVwMm1jajRpZjA4" class="footer_link instagram"></a>
-                </li>
-                <li class="footer_item">
-                    <a href="https://www.tiktok.com/@chocolateland28?is_from_webapp=1&sender_device=pc" class="footer_link tiktok"></a>
-                </li>
-                </ul>
-        </div>
-
-</div>
-        </footer>
+        <footer id="footer-placeholder"></footer>
     </div>
     <script src="https://unpkg.com/i18next@21.6.0/dist/umd/i18next.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="./aseets/js/swiper.js"></script>
-    <script src="./aseets/js/index.js"></script>
-    <script src="./aseets/js/i118.js"></script>
+    <script src="../aseets/js/swiper.js"></script>
+    <script src="../aseets/js/index.js"></script>
+    <script src="../aseets/js/i118.js"></script>
+    <script src="../aseets/js/footerHeader.js"></script>
 </body>
 
 
