--- a/pages/categoryPages/candies.html
+++ b/pages/categoryPages/candies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karamel</title>
+    <title>Candies</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -16,9 +16,9 @@
 
 <body>
     <div class="wrapper">
-        <header id="header-placeholder"></header>
+        <header id="header-placeholder"> </header>
         <main  >
-            <section id="category" class="categories" data-category="karamel">
+            <section id="category" class="categories" data-category="candies">
                 <div class="container product__container">
                     <div class="product__content">
 <ul class="product-list"></ul>
