--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -16,38 +16,7 @@
 
 <body>
     <div class="wrapper">
-        <header class="header">
-<div class="container">
-    <div class="header__cont">
-<div class="header__logo">
-<a href="../pages/index.html" class="header__logo">
-    <img src="/foto/the.png" class="header__img" alt="logo">
-</a></div>
-<nav class="header__nav">
-<ul class="header_list">
-<li class="header_item">
-    <a href="../pages/about.html" class="header_link">Про Нас</a>
-</li>
-<li class="header_item">
-    <a href="../pages/kontakt.html" class="header_link active">Контакти</a>
-</li>
-<li class="header_item">
-    <a href="../pages/Delivery.html" class="header_link ">Доставка та оплата</a>
-</li>
-</ul>
-</nav>
-
-<div id="contents" class="btn">
-<p id="hello"></p>
-<p id="welcome"></p>
-
-<button id="change-en">En</button>
-<button id="change-cs">Čs</button>
-<button id="change-uk">Uk</button>
-</div>
-</div></div>
-
-        </header>
+        <header id="header-placeholder"></header>
         <main class="kontakt">
 <div class="container kontakt__container">
 <div class="kontakt__content">
@@ -65,46 +34,237 @@
 </div>
 </div>
         </main>
-        <footer class="footer">
-<div class="container footer-container">
-
-    <div class="footer__logo">
-        <a href="../pages/index.html" class="footer__logo">
-            <img src="/foto/the.png" class="footer__img" alt="logo">
-        </a></div>
-        <div class="footer_content">
-            <ul class="footer_list">
-                <li class="footer_item">
-                    <a href="../pages/about.html" class="footer_link">Про Нас</a>
-                </li>
-                <li class="footer_item">
-                    <a href="../pages/kontakt.html" class="footer_link active">Контакти</a>
-                </li>
-                <li class="footer_item">
-                    <a href="../pages/Delivery.html" class="footer_link">Доставка та оплата</a>
-                </li>
-                </ul>
-        </div>
-        <div class="footer-naw">
-            <ul class="footer_list naw-list">
-                <li class="footer_item naw-item">
-                    <a href="https://www.instagram.com/chocolateland28?igsh=dmVwMm1jajRpZjA4" class="footer_link instagram"></a>
-                </li>
-                <li class="footer_item">
-                    <a href="https://www.tiktok.com/@chocolateland28?is_from_webapp=1&sender_device=pc" class="footer_link tiktok"></a>
-                </li>
-                </ul>
-        </div>
-
-</div>
-        </footer>
+        <footer id="footer-placeholder"></footer>
     </div>
     <script src="https://unpkg.com/i18next@21.6.0/dist/umd/i18next.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../aseets/js/swiper.js"></script>
     <script src="../aseets/js/index.js"></script>
     <script src="../aseets/js/i118.js"></script>
+    <script src="../aseets/js/footerHeader.js"></script>
 </body>
 
 
 </html>
+<!-- function initSmartSearch() {
+    fetch("/data/product.json")
+        .then(res => res.json())
+        .then(data => {
+            const searchInput = document.getElementById("search");
+            const searchButton = document.getElementById("searchBtn");
+            const resultsDiv = document.getElementById("results");
+
+            searchButton.addEventListener("click", () => {
+                const query = searchInput.value.trim().toLowerCase();
+                if (!query) {
+                    resultsDiv.innerHTML = "<p>Введіть запит для пошуку.</p>";
+                    return;
+                }
+
+                let found = false;
+                const isInCategory = window.location.pathname.includes("/categoryPages/");
+                const buildLink = cat =>
+                    isInCategory
+                        ? `../categoryPages/${cat}.html`
+                        : `./categoryPages/${cat}.html`;
+
+                for (const category in data) {
+                    if (category.toLowerCase().includes(query)) {
+                        window.location.href = buildLink(category);
+                        return;
+                    }
+                }
+
+                for (const category in data) {
+                    for (const product of data[category]) {
+                        if (
+                            product.name.toLowerCase().includes(query) ||
+                            product.description?.toLowerCase().includes(query)
+                        ) {
+                            window.location.href = buildLink(category);
+                            return;
+                        }
+                    }
+                }
+
+                resultsDiv.innerHTML = "<p>Нічого не знайдено.</p>";
+            });
+        })
+        .catch(err => console.error("❌ Search error:", err));
+}
+
+/* =========================
+   CATALOG
+========================= */
+function loadCatalog() {
+    const btn = document.querySelector(".catalog__btn");
+    const menu = document.querySelector(".catalog__menu");
+
+    if (!btn || !menu) return;
+
+    btn.addEventListener("click", e => {
+        e.stopPropagation();
+        menu.style.display = menu.style.display === "block" ? "none" : "block";
+    });
+
+    document.addEventListener("click", e => {
+        if (!menu.contains(e.target) && !btn.contains(e.target)) {
+            menu.style.display = "none";
+        }
+    });
+}
+
+/* =========================
+   CART
+========================= */
+function initCart() {
+    const cartBtn = document.getElementById("cart-btn");
+    const cartModal = document.getElementById("cart-modal");
+    const cartItems = document.getElementById("cart-items");
+    const totalPrice = document.getElementById("total-price");
+    const cartCount = document.getElementById("cart-count");
+    const cartCountModal = document.getElementById("cart-count-modal");
+
+    // ✅ ЄДИНИЙ STATE
+    window.cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+    // 🧹 чистка
+    window.cart = window.cart.filter(item => item && item.name && !isNaN(item.price));
+    saveCart();
+
+    updateCart();
+
+    cartBtn?.addEventListener("click", () => {
+        cartModal.style.display = "flex";
+    });
+
+    cartModal?.addEventListener("click", e => {
+        if (e.target === cartModal) cartModal.style.display = "none";
+    });
+
+    document.addEventListener("click", e => {
+        /* REMOVE */
+        if (e.target.classList.contains("remove-item")) {
+            const index = +e.target.dataset.index;
+            window.cart.splice(index, 1);
+            saveCart();
+            updateCart();
+        }
+
+        /* ADD TO CART */
+        if (e.target.classList.contains("add-to-cart")) {
+            e.preventDefault();
+
+            /* CUSTOM BOX */
+            if (e.target.dataset.type === "custom_box") {
+                if (!window.assembleState?.selectedBox) {
+                    console.warn("❌ Бокс не обрано");
+                    return;
+                }
+
+                const box = {
+                    type: "custom_box",
+                    name: `🎁 БОКС: ${assembleState.selectedBox.name}`,
+                    quantity: 1,
+                    price: Number(calculateTotalPrice()) || 0,
+                    image: assembleState.selectedBox.image || "/foto/logo2.png",
+                    box: assembleState.selectedBox,
+                    products: assembleState.selectedProducts || [],
+                    card: assembleState.selectedCard || null
+                };
+
+                window.cart.push(box);
+                saveCart();
+                updateCart();
+                return;
+            }
+
+            /* REGULAR PRODUCT */
+            const name = e.target.dataset.name;
+            const price = Number(e.target.dataset.price) || 0;
+            const image = e.target.dataset.image || "/foto/logo2.png";
+
+            const exist = window.cart.find(i => i.name === name);
+            if (exist) exist.quantity++;
+            else window.cart.push({ name, price, image, quantity: 1 });
+
+            saveCart();
+            updateCart();
+        }
+    });
+
+    /* UPDATE CART UI */
+    function updateCart() {
+        cartItems.innerHTML = "";
+        let total = 0;
+        let count = 0;
+
+        if (!window.cart.length) {
+            cartItems.innerHTML = "<p>🛒 Кошик порожній</p>";
+        }
+
+        window.cart.forEach((item, index) => {
+            const li = document.createElement("li");
+            li.innerHTML =
+                item.type === "custom_box"
+                    ? renderCustomBoxItemSafe(item, index)
+                    : renderRegularItemSafe(item, index);
+            cartItems.appendChild(li);
+
+            total += (item.price || 0) * (item.quantity || 1);
+            count += item.quantity || 1;
+        });
+
+        totalPrice.textContent = total + " грн";
+        cartCount.textContent = count;
+        cartCountModal.textContent = count;
+    }
+
+    window.updateCart = updateCart;
+    window.saveCart = saveCart;
+}
+
+/* =========================
+   SAVE
+========================= */
+function saveCart() {
+    localStorage.setItem("cart", JSON.stringify(window.cart));
+    console.log("💾 cart:", window.cart);
+}
+
+/* =========================
+   RENDER HELPERS
+========================= */
+function renderRegularItemSafe(item, index) {
+    return `
+      <div class="cart-item">
+        <img src="${item.image}">
+        <strong>${item.name}</strong> x${item.quantity}
+        <span>${item.price * item.quantity} грн</span>
+        <button class="remove-item" data-index="${index}">✕</button>
+      </div>
+    `;
+}
+
+function renderCustomBoxItemSafe(item, index) {
+    return `
+      <div class="cart-box">
+        <img src="${item.image}">
+        <div>
+          <strong>${item.name}</strong>
+          <div>${item.price} грн</div>
+        </div>
+        <button class="remove-item" data-index="${index}">✕</button>
+      </div>
+    `;
+}
+
+/* =========================
+   INIT ONCE
+========================= */
+if (!window.__cartInitialized) {
+    window.__cartInitialized = true;
+    initCart();
+    initSmartSearch();
+    loadCatalog();
+} -->
