--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <script src="../assets/js/i18.js"></script>
     <script src="../assets/js/swiper.js" ></script>
     <script src="../assets/js/footerHeader.js"></script>
-    <script src="../assets/js/index.js" ></script>
+    <script src="./assets/js/index.js" ></script>
 </body>
 
 
