--- a/pages/header.html
+++ b/pages/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header__cont">
     <div class="header__logo">
-    <a href="/pages/index.html" class="header__logo">
+    <a href="/index.html" class="header__logo">
         <img src="/foto/лого.png" class="header__img" alt="logo">
     </a></div>
     <nav class="header__nav">
