--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../assets/style.css">
+<link rel="stylesheet" href="./assets/style.css">
 <link 
   rel="stylesheet" 
   href="https://unpkg.com/swiper/swiper-bundle.min.css" 
@@ -31,19 +31,19 @@
                   <div class="swiper-wrapper ">
                     <div class="swiper-slide ">
                         <a href="#">
-                      <img src="../foto/сердце малина.jpg" alt="slide 1"></a>
+                      <img src="./foto/сердце малина.jpg" alt="slide 1"></a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#">
-                      <img src="../foto/цукерка фісташка.jpg" alt="slide 2"></a>
+                      <img src="./foto/цукерка фісташка.jpg" alt="slide 2"></a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#">
-                      <img src="../foto/шоколад миндаль.jpg" alt="slide 3"></a>
+                      <img src="./foto/шоколад миндаль.jpg" alt="slide 3"></a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#">
-                      <img src="../foto/чукерка сердце червона.png" alt="slide 4"></a>
+                      <img src="./foto/чукерка сердце червона.png" alt="slide 4"></a>
                     </div>
                   </div>
               
@@ -77,24 +77,24 @@
 <ul class="new__list">
     <li class="new__item first">
         <a href="#" class="new__link">
-            <img  class="list-foto" src="../foto/chocolateNews foto1.jpg" alt="chocolateNews foto1">
+            <img  class="list-foto" src="./foto/chocolateNews foto1.jpg" alt="chocolateNews foto1">
         </a>
 <h3 class="new-title">Шоколад та його користь</h3>
-<a  class ="services-more" href="/pages/newsinIndex/chocolateNews.html">Learn more</a>
+<a  class ="services-more" href="./pages/newsinIndex/chocolateNews.html">Learn more</a>
 </li>
 <li class="new__item second">
     <a href="#" class="new__link">
-        <img class="list-foto" src="../foto/шоколад миндаль.jpg" alt="foto1">
+        <img class="list-foto" src="./foto/шоколад миндаль.jpg" alt="foto1">
     </a>
 <h3 class="new-title">Збери шоколадний подарунок сам</h3>
-<a  class ="services-more" href="/pages/newsinIndex/chocolateNews2.html">Learn more</a>
+<a  class ="services-more" href="./pages/newsinIndex/chocolateNews2.html">Learn more</a>
 </li>
 <li class="new__item third">
     <a href="#" class="new__link">
-        <img  class="list-foto" src="../foto/photo_2024-05-08_15-23-50.jpg" alt="foto1">
+        <img  class="list-foto" src="./foto/photo_2024-05-08_15-23-50.jpg" alt="foto1">
     </a>
 <h3 class="new-title">Корпоративні замовлення</h3>
-<a  class ="services-more" href="/pages/newsinIndex/chocolateNews3.html">Learn more</a>
+<a  class ="services-more" href="./pages/newsinIndex/chocolateNews3.html">Learn more</a>
 </li>
 </ul>
                 </div>
@@ -106,9 +106,9 @@
     
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js" ></script>
     <script src="https://unpkg.com/i18next@21.6.0/dist/umd/i18next.min.js" ></script>
-    <script src="../assets/js/i18.js"></script>
-    <script src="../assets/js/swiper.js" ></script>
-    <script src="../assets/js/footerHeader.js"></script>
+    <script src="./assets/js/i18.js"></script>
+    <script src="./assets/js/swiper.js" ></script>
+    <script src="./assets/js/footerHeader.js"></script>
     <script src="./assets/js/index.js" ></script>
 </body>
 
