--- a/pages/categoryPages/chocolateDippedDelights.html
+++ b/pages/categoryPages/chocolateDippedDelights.html
@@ -28,12 +28,13 @@
         </main>
         <footer id="footer-placeholder"></footer>
     </div>
-   
+    <script src="https://unpkg.com/i18next@21.6.0/dist/umd/i18next.min.js"></script>
+    <script src="/assets/js/i18.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="../../assets/js/swiper.js"></script>
-    <script src="../../assets/js/index.js"></script>
-    <script src="../../assets/js/products.js"></script>
-    <script src="../../assets/js/footerHeader.js"></script>
+    <script src="/assets/js/swiper.js"></script>
+    <script src="/assets/js/index.js"></script>
+    <script src="/assets/js/products.js"></script>
+    <script src="/assets/js/footerHeader.js"></script>
 </body>
 
 
