--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оформлення замовлення</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 <div class="wrapper">
@@ -196,10 +196,10 @@
     <footer id="footer-placeholder"></footer>
 </div>
 
-<script src="../assets/js/footerHeader.js"></script>
-<script src="../assets/js/index.js"></script>
+<script src="/assets/js/footerHeader.js"></script>
+<script src="/assets/js/index.js"></script>
 <script src="https://widget.packeta.com/v6/www/js/library.js"></script>
-<script src="../assets/js/checkout.js"></script>
+<script src="/assets/js/checkout.js"></script>
 
 <!-- Модалка картки -->
 <div id="card-modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; 
