--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оформлення замовлення</title>
+     <script>
+    // для GitHub Pages базовий шлях
+    const base = window.location.pathname.includes('/ivachocolate/') ? '/ivachocolate' : '';
+  </script>
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
