--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -7,6 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+ <script>
+    // для GitHub Pages базовий шлях
+    const base = window.location.pathname.includes('/ivachocolate/') ? '/ivachocolate' : '';
+  </script>
 <link rel="stylesheet" href="../assets/style.css">
 <link 
   rel="stylesheet" 
