--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChocolateLand</title>
+     <script src="config.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
- <script>
-    // для GitHub Pages базовий шлях
-    const base = window.location.pathname.includes('/ivachocolate/') ? '/ivachocolate' : '';
-  </script>
-<link rel="stylesheet" href="./assets/style.css">
+<link rel="stylesheet" href="assets/style.css">
 <link 
   rel="stylesheet" 
   href="https://unpkg.com/swiper/swiper-bundle.min.css" 
@@ -110,10 +107,10 @@
     
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js" ></script>
     <script src="https://unpkg.com/i18next@21.6.0/dist/umd/i18next.min.js" ></script>
-    <script src="./assets/js/i18.js"></script>
-    <script src="./assets/js/swiper.js" ></script>
-    <script src="./assets/js/footerHeader.js"></script>
-    <script src="./assets/js/index.js" ></script>
+    <script src="assets/js/i18.js"></script>
+    <script src="assets/js/swiper.js" ></script>
+    <script src="assets/js/footerHeader.js"></script>
+    <script src="assets/js/index.js" ></script>
 </body>
 
 
