--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -6,11 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оформлення замовлення</title>
-     <script>
-    // для GitHub Pages базовий шлях
-    const base = window.location.pathname.includes('/ivachocolate/') ? '/ivachocolate' : '';
-  </script>
-    <link rel="stylesheet" href="/assets/style.css">
+      <script src="../config.js"></script>
+    <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
 <div class="wrapper">
@@ -97,7 +94,7 @@
                                 </span>
                             </span>
                             <span class="shipping-logo">
-                                <img src="/foto/лого засілковна.webp" alt="Zásilkovna logo">
+                                <img src="../foto/лого засілковна.webp" alt="Zásilkovna logo">
                             </span>
                             <strong class="payment-shipping-price" data-shipping-price="89">89 Kč</strong>
                         </label>
@@ -120,7 +117,7 @@
                                 </span>
                             </span>
                             <span class="shipping-logo">
-                                <img src="/foto/лого чеська пошта.webp" alt="Česká pošta logo">
+                                <img src="../foto/лого чеська пошта.webp" alt="Česká pošta logo">
                             </span>
                             <strong class="payment-shipping-price" data-shipping-price="75">75 Kč</strong>
                         </label>
@@ -200,10 +197,10 @@
     <footer id="footer-placeholder"></footer>
 </div>
 
-<script src="/assets/js/footerHeader.js"></script>
-<script src="/assets/js/index.js"></script>
+<script src="../assets/js/footerHeader.js"></script>
+<script src="../assets/js/index.js"></script>
 <script src="https://widget.packeta.com/v6/www/js/library.js"></script>
-<script src="/assets/js/checkout.js"></script>
+<script src="../assets/js/checkout.js"></script>
 
 <!-- Модалка картки -->
 <div id="card-modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; 
