--- a/pages/newsinIndex/chocolateNews.html
+++ b/pages/newsinIndex/chocolateNews.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News</title>
+        <script src="../../config.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/assets/style.css">
+<link rel="stylesheet" href="../../assets/style.css">
 <link 
   rel="stylesheet" 
   href="https://unpkg.com/swiper/swiper-bundle.min.css" 
@@ -21,7 +22,7 @@
 <div class="main__content">
     <div class="main_box">
         <div class="main__img">
-<img  class="list-foto" src="/foto/chocolateNews foto1.jpg" alt="chocolateNews foto1">
+<img  class="list-foto" src="../../foto/chocolateNews foto1.jpg" alt="chocolateNews foto1">
         </div>
         <div class="main__info">
     <h2 class="main__title twotitle">Шоколад та його користь</h2>
@@ -83,10 +84,10 @@
     </div>
     <script src="https://unpkg.com/i18next@21.6.0/dist/umd/i18next.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="/assets/js/swiper.js"></script>
-    <script src="/assets/js/index.js"></script>
-    <script src="/assets/js/i18.js"></script>
-    <script src="/assets/js/footerHeader.js"></script>
+    <script src="../../assets/js/swiper.js"></script>
+    <script src="../../assets/js/index.js"></script>
+    <script src="../../assets/js/i18.js"></script>
+    <script src="../../assets/js/footerHeader.js"></script>
 </body>
 
 
