--- a/pages/newsinIndex/chocolateNews3.html
+++ b/pages/newsinIndex/chocolateNews3.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Корпоративні замовлення | IVA Chocolate</title>
+        <script src="../../config.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="../../assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -30,7 +31,7 @@
                     <!-- Основна інформація -->
                     <div class="main_box">
                         <div class="main__img">
-                            <img class="list-foto" src="/foto/corporate-chocolate.jpg" alt="Корпоративні набори шоколаду">
+                            <img class="list-foto" src="../../foto/corporate-chocolate.jpg" alt="Корпоративні набори шоколаду">
                         </div>
 
                         <div class="main__info">
@@ -334,7 +335,7 @@
                         <input type="checkbox" id="privacy-consent" required>
                         <span>
                             Я погоджуюсь на обробку моїх персональних даних відповідно до
-                            <a href="../privacy.html" target="_blank">політики конфіденційності</a>
+                            <a href="../../pages/privacy.html" target="_blank">політики конфіденційності</a>
                         </span>
                     </label>
             </div>
@@ -375,10 +376,10 @@
     
     <script src="https://unpkg.com/i18next@21.6.0/dist/umd/i18next.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="/assets/js/swiper.js"></script>
-    <script src="/assets/js/index.js"></script>
+    <script src="../../assets/js/swiper.js"></script>
+    <script src="../../assets/js/index.js"></script>
     <!-- <script src="/assets/js/i18.js"></script> -->
-    <script src="/assets/js/footerHeader.js"></script>
-    <script src="/assets/js/chocolateNews3.js"></script>
+    <script src="../../assets/js/footerHeader.js"></script>
+    <script src="../../assets/js/chocolateNews3.js"></script>
 </body>
 </html>
