--- a/pages/footer.html
+++ b/pages/footer.html
@@ -2,19 +2,19 @@
     <div class="container footer-container">
     
         <div class="footer__logo">
-            <a href="/index.html" class="footer__logo">
-                <img src="/foto/лого.png" class="footer__img" alt="logo">
+            <a href="index.html" class="footer__logo">
+                <img src="foto/лого.png" class="footer__img" alt="logo">
             </a></div>
             <div class="footer_content">
                 <ul class="footer_list">
                     <li class="footer_item">
-                        <a href="/pages/about.html" class="footer_link">Про Нас</a>
+                        <a href="pages/about.html" class="footer_link">Про Нас</a>
                     </li>
                     <li class="footer_item">
-                        <a href="/pages/kontakt.html" class="footer_link">Контакти</a>
+                        <a href="pages/kontakt.html" class="footer_link">Контакти</a>
                     </li>
                     <li class="footer_item">
-                        <a href="/pages/Delivery.html" class="footer_link">Доставка та оплата</a>
+                        <a href="pages/Delivery.html" class="footer_link">Доставка та оплата</a>
                     </li>
                     </ul>
             </div>
