--- a/pages/categoryPages/chocolate-dipped delights.html
+++ b/pages/categoryPages/chocolate-dipped delights.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chocolate-dipped-delights</title>
+    <title>chocolate-dipped delights</title>
         <script src="../../config.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,9 +32,9 @@
    
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../../assets/js/swiper.js"></script>
+     <script src="../../assets/js/footerHeader.js"></script>
     <script src="../../assets/js/index.js"></script>
-    <script src="../../assets/js/products.js"></script>
-    <script src="../../assets/js/footerHeader.js"></script>
+      <script src="../../assets/js/products.js"></script>
 </body>
 
 
