--- a/pages/header.html
+++ b/pages/header.html
@@ -35,7 +35,7 @@
     <button class="catalog__btn">Каталог</button>
     <ul class="catalog__menu">
         <li class="catalog__item"><a class="catalog__link"  href="pages/categoryPages/karamel.html">Карамель</a></li>
-        <li class="catalog__item"><a class="catalog__link" href="pages/categoryPages/chocolateDippedDelights.html">Фрукти в шоколаді</a></li>
+        <li class="catalog__item"><a class="catalog__link" href="pages/categoryPages/chocolate-dipped delights.html">Фрукти в шоколаді</a></li>
         <li class="catalog__item"><a class="catalog__link" href="pages/categoryPages/assemble.html">Збери сам</a></li>
         <li class="catalog__item"><a class="catalog__link" href="pages/categoryPages/candies.html">Цукерки</a></li>
         <li class="catalog__item"><a  class="catalog__link" href="pages/categoryPages/chocolate.html">Шоколадні плитки</a></li>
