--- a/pages/header.html
+++ b/pages/header.html
@@ -81,7 +81,7 @@
          <section class="header-panel">
     <ul class="header-panel__menu">
        
-        <li class="header-panel__item"><a class="header__link" href="pages/categoryPages/chocolateDippedDelights.html">Фрукти в шоколаді</a></li>
+        <li class="header-panel__item"><a class="header__link" href="pages/categoryPages/chocolate-dipped delights.html">Фрукти в шоколаді</a></li>
         <li class="header-panel__item"><a class="header__link" href="pages/categoryPages/assemble.html">Збери сам</a></li>
         <li class="header-panel__item"><a class="header__link" href="pages/newsinIndex/chocolateNews3.html">Корпоративні замовлення</a></li>
 
